social media added

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,31 @@
 .header{
   background: #0B486B;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
 }
-
-
 
 
 .landing{
   background: #0B486B;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  text-align: center;
+
 }
+
+
+
+.social {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
+
+.social i {
+  color: white;
+  font-size: 5em;
+  padding: 8px;
+}
+
+
