--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+
+
+.profile-img{
+  height: 250px;
+  padding-top: 5em;
+}
+
+
+.Profile-text{
+  background-color: black;
+  opacity: .8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+
+}
+
+.Profile-text h1 {
+  font-size: 66px;
+  font-weight: bold;
+  color: white;
+}
+
+.Profile-text hr {
+  border-top: 5px dotted white;
+  width: 50%;
+  margin: auto;
+}
+
+.Profile-text p {
+  color: white;
+  font-size: 20px;
+  padding: 1em;
+}
