--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,12 @@
 
 
 .App {
-	background: #000000;
+  /* background: #000000; */
+  background: #0B486B;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: center;
+
     color: #fff;
     overflow: hidden;
 }
