--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .header{
   background: #0B486B;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+  background: linear-gradient(to right, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ ;
+
 }
 
 
@@ -37,6 +38,5 @@
 }
 
 a {
-	color: #fff !important;
+	color: white ;
 }
-
